[package]
name = "yew-todo-app"
version = "0.1.0"
authors = ["AndrewSC208 <meilingandrew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.14.2", feature = ["std_web"] }
strum = "0.13"
strum_macros = "0.13"
serde = "1"
serde_derive = "1"

